[gd_scene load_steps=2 format=3 uid="uid://kisexp0mo35v"]

[ext_resource type="Script" path="res://scripts/NetworkForm.gd" id="1_c331f"]

[node name="NetworkForm" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_c331f")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.392157)

[node name="Form" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -546.0
offset_top = -291.0
offset_right = 543.0
offset_bottom = 291.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="NetworkList" type="Control" parent="Form"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="NetworksLabel" type="Label" parent="Form/NetworkList"]
layout_mode = 0
offset_left = 75.0
offset_top = 43.0
offset_right = 215.0
offset_bottom = 85.0
theme_override_font_sizes/font_size = 28
text = "Networks"

[node name="Networks" type="Control" parent="Form/NetworkList"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Ethereum Sepolia" type="Button" parent="Form/NetworkList/Networks"]
layout_mode = 0
offset_left = 365.0
offset_top = 27.0
offset_right = 510.0
offset_bottom = 58.0
mouse_default_cursor_shape = 2
text = "Ethereum Sepolia"

[node name="Arbitrum Sepolia" type="Button" parent="Form/NetworkList/Networks"]
layout_mode = 0
offset_left = 365.0
offset_top = 65.0
offset_right = 510.0
offset_bottom = 96.0
mouse_default_cursor_shape = 2
text = "Arbitrum Sepolia"

[node name="Optimism Sepolia" type="Button" parent="Form/NetworkList/Networks"]
layout_mode = 0
offset_left = 365.0
offset_top = 103.0
offset_right = 510.0
offset_bottom = 134.0
mouse_default_cursor_shape = 2
text = "Optimism Sepolia"

[node name="Base Sepolia" type="Button" parent="Form/NetworkList/Networks"]
layout_mode = 0
offset_left = 365.0
offset_top = 141.0
offset_right = 510.0
offset_bottom = 172.0
mouse_default_cursor_shape = 2
text = "Base Sepolia"

[node name="Avalanche Fuji" type="Button" parent="Form/NetworkList/Networks"]
layout_mode = 0
offset_left = 365.0
offset_top = 179.0
offset_right = 510.0
offset_bottom = 210.0
mouse_default_cursor_shape = 2
text = "Avalanche Fuji"

[node name="BNB Chain Testnet" type="Button" parent="Form/NetworkList/Networks"]
layout_mode = 0
offset_left = 365.0
offset_top = 217.0
offset_right = 510.0
offset_bottom = 248.0
mouse_default_cursor_shape = 2
text = "BNB Chain Testnet"

[node name="Wemix Testnet" type="Button" parent="Form/NetworkList/Networks"]
layout_mode = 0
offset_left = 365.0
offset_top = 255.0
offset_right = 510.0
offset_bottom = 286.0
mouse_default_cursor_shape = 2
text = "Wemix Testnet"

[node name="Gnosis Chiado" type="Button" parent="Form/NetworkList/Networks"]
layout_mode = 0
offset_left = 365.0
offset_top = 293.0
offset_right = 510.0
offset_bottom = 324.0
mouse_default_cursor_shape = 2
text = "Gnosis Chiado"

[node name="Polygon Amoy" type="Button" parent="Form/NetworkList/Networks"]
layout_mode = 0
offset_left = 365.0
offset_top = 331.0
offset_right = 510.0
offset_bottom = 362.0
mouse_default_cursor_shape = 2
text = "Polygon Amoy"

[node name="Kroma Sepolia" type="Button" parent="Form/NetworkList/Networks"]
layout_mode = 0
offset_left = 365.0
offset_top = 369.0
offset_right = 510.0
offset_bottom = 400.0
mouse_default_cursor_shape = 2
text = "Kroma Sepolia"

[node name="Celo Alfajores" type="Button" parent="Form/NetworkList/Networks"]
layout_mode = 0
offset_left = 365.0
offset_top = 407.0
offset_right = 518.0
offset_bottom = 438.0
mouse_default_cursor_shape = 2
text = "Celo Alfajores"

[node name="Blast Sepolia" type="Button" parent="Form/NetworkList/Networks"]
layout_mode = 0
offset_left = 365.0
offset_top = 445.0
offset_right = 510.0
offset_bottom = 476.0
mouse_default_cursor_shape = 2
text = "Blast Sepolia"

[node name="Mode Sepolia" type="Button" parent="Form/NetworkList/Networks"]
layout_mode = 0
offset_left = 365.0
offset_top = 483.0
offset_right = 510.0
offset_bottom = 514.0
mouse_default_cursor_shape = 2
text = "Mode Sepolia"

[node name="Close" type="Button" parent="Form/NetworkList"]
layout_mode = 0
offset_left = 989.0
offset_top = 538.0
offset_right = 1076.0
offset_bottom = 569.0
mouse_default_cursor_shape = 2
text = "Close"

[node name="Input" type="Control" parent="Form"]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="SaveChanges" type="Button" parent="Form/Input"]
layout_mode = 0
offset_left = 862.0
offset_top = 8.0
offset_right = 949.0
offset_bottom = 39.0
mouse_default_cursor_shape = 2
text = "Save Changes"

[node name="RestoreDefaults" type="Button" parent="Form/Input"]
layout_mode = 0
offset_left = 411.0
offset_top = 539.0
offset_right = 636.0
offset_bottom = 570.0
mouse_default_cursor_shape = 2
text = "Restore Defaults"

[node name="Cancel" type="Button" parent="Form/Input"]
layout_mode = 0
offset_left = 985.0
offset_top = 8.0
offset_right = 1072.0
offset_bottom = 39.0
mouse_default_cursor_shape = 2
text = "Cancel"

[node name="NetworkName" type="Label" parent="Form/Input"]
layout_mode = 0
offset_left = 52.0
offset_top = 43.0
offset_right = 258.0
offset_bottom = 82.0
theme_override_font_sizes/font_size = 28
text = "Network Name"

[node name="Error" type="Label" parent="Form/Input"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 442.0
offset_top = 9.0
offset_right = 779.0
offset_bottom = 38.0
text = "Error:"

[node name="LocalChronomancerLabel" type="Label" parent="Form/Input"]
layout_mode = 0
offset_left = 569.0
offset_top = 285.0
offset_right = 808.0
offset_bottom = 314.0
text = "Local Chronomancer Endpoint:
"

[node name="LocalChronomancer" type="LineEdit" parent="Form/Input"]
layout_mode = 0
offset_left = 814.0
offset_top = 284.0
offset_right = 1054.0
offset_bottom = 315.0

[node name="LocalScryPoolLabel" type="Label" parent="Form/Input"]
layout_mode = 0
offset_left = 622.0
offset_top = 322.0
offset_right = 808.0
offset_bottom = 351.0
text = "Local ScryPool Contract:
"

[node name="LocalScryPool" type="LineEdit" parent="Form/Input"]
layout_mode = 0
offset_left = 814.0
offset_top = 321.0
offset_right = 1054.0
offset_bottom = 352.0

[node name="ScanURLLabel" type="Label" parent="Form/Input"]
layout_mode = 0
offset_left = 610.0
offset_top = 102.0
offset_right = 695.0
offset_bottom = 151.0
text = "Scan URL:
(optional)
"

[node name="ScanURL" type="LineEdit" parent="Form/Input"]
layout_mode = 0
offset_left = 694.0
offset_top = 99.0
offset_right = 1007.0
offset_bottom = 130.0

[node name="LocalBnMLabel" type="Label" parent="Form/Input"]
layout_mode = 0
offset_left = 610.0
offset_top = 163.0
offset_right = 777.0
offset_bottom = 212.0
text = "Local BnM Contract:
(optional)"

[node name="LocalBnM" type="LineEdit" parent="Form/Input"]
layout_mode = 0
offset_left = 773.0
offset_top = 162.0
offset_right = 1013.0
offset_bottom = 193.0

[node name="RPCsLabel" type="Label" parent="Form/Input"]
layout_mode = 0
offset_left = 22.0
offset_top = 149.0
offset_right = 187.0
offset_bottom = 172.0
text = "RPCs:"

[node name="RPCs" type="Control" parent="Form/Input"]
anchors_preset = 0
offset_left = 12.0
offset_right = 52.0
offset_bottom = 40.0

[node name="RPC" type="LineEdit" parent="Form/Input/RPCs"]
layout_mode = 0
offset_left = 15.0
offset_top = 182.0
offset_right = 502.0
offset_bottom = 213.0

[node name="RPC2" type="LineEdit" parent="Form/Input/RPCs"]
layout_mode = 0
offset_left = 15.0
offset_top = 218.0
offset_right = 502.0
offset_bottom = 249.0

[node name="RPC3" type="LineEdit" parent="Form/Input/RPCs"]
layout_mode = 0
offset_left = 15.0
offset_top = 254.0
offset_right = 502.0
offset_bottom = 285.0

[node name="RPC4" type="LineEdit" parent="Form/Input/RPCs"]
layout_mode = 0
offset_left = 15.0
offset_top = 289.0
offset_right = 502.0
offset_bottom = 320.0

[node name="RPC5" type="LineEdit" parent="Form/Input/RPCs"]
layout_mode = 0
offset_left = 15.0
offset_top = 325.0
offset_right = 502.0
offset_bottom = 356.0

[node name="RPC6" type="LineEdit" parent="Form/Input/RPCs"]
layout_mode = 0
offset_left = 15.0
offset_top = 360.0
offset_right = 502.0
offset_bottom = 391.0

[node name="RPC7" type="LineEdit" parent="Form/Input/RPCs"]
layout_mode = 0
offset_left = 15.0
offset_top = 396.0
offset_right = 502.0
offset_bottom = 427.0

[node name="RPC8" type="LineEdit" parent="Form/Input/RPCs"]
layout_mode = 0
offset_left = 15.0
offset_top = 431.0
offset_right = 502.0
offset_bottom = 462.0
